src/OpenCvSharpExtern/core_Mat.h

CVAPI(cv::Mat*) core_Mat_adjustROI(cv::Mat *self, int dtop, int dbottom, int dleft, int dright)
{
    cv::Mat ret = self->adjustROI(dtop, dbottom, dleft, dright);
    return new cv::Mat(ret);
}
CVAPI(void) core_Mat_assignTo1(cv::Mat *self, cv::Mat *m)
{
    self->assignTo(*m);
}
CVAPI(void) core_Mat_assignTo2(cv::Mat *self, cv::Mat *m, int type)
{
    self->assignTo(*m, type);
}
CVAPI(int) core_Mat_channels(cv::Mat *self)
{
    return self->channels();
}
CVAPI(int) core_Mat_checkVector1(cv::Mat *self, int elemChannels)
{
    return self->checkVector(elemChannels);
}
CVAPI(int) core_Mat_checkVector2(cv::Mat *self, int elemChannels, int depth)
{
    return self->checkVector(elemChannels, depth);
}
CVAPI(int) core_Mat_checkVector3(cv::Mat *self, int elemChannels, int depth, int requireContinuous)
{
    return self->checkVector(elemChannels, depth, requireContinuous != 0);
}
CVAPI(cv::Mat*) core_Mat_clone(cv::Mat *self)
{
    cv::Mat ret = self->clone();
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_col_toMat(cv::Mat *self, int x)
{
    cv::Mat ret = self->col(x);
    return new cv::Mat(ret);
}
CVAPI(cv::MatExpr*) core_Mat_col_toMatExpr(cv::Mat *self, int x)
{
    cv::Mat ret = self->col(x);
    return new cv::MatExpr(ret);
}
CVAPI(int) core_Mat_cols(cv::Mat *self)
{
    return self->cols;
}
CVAPI(cv::Mat*) core_Mat_colRange_toMat(cv::Mat *self, int startCol, int endCol)
{ 
    cv::Mat ret = self->colRange(startCol, endCol);
    return new cv::Mat(ret);
}
CVAPI(cv::MatExpr*) core_Mat_colRange_toMatExpr(cv::Mat *self, int startCol, int endCol)
{
    cv::Mat ret = self->colRange(startCol, endCol);
    return new cv::MatExpr(ret);
}
CVAPI(int) core_Mat_dims(cv::Mat *self)
{
    return self->dims;
}
CVAPI(void) core_Mat_convertTo(cv::Mat *self, cv::Mat *m, int rtype, double alpha, double beta)
{
    self->convertTo(*m, rtype, alpha, beta);
}
CVAPI(void) core_Mat_copyTo(cv::Mat *self, cv::Mat *m, cv::Mat *mask)
{
    const cv::Mat &maskMat = (mask == NULL) ? cv::Mat() : *mask;
    self->copyTo(*m, maskMat);
}
CVAPI(void) core_Mat_create1(cv::Mat *self, int rows, int cols, int type)
{
    self->create(rows, cols, type);
}
CVAPI(void) core_Mat_create2(cv::Mat *self, int ndims, const int *sizes, int type)
{
    self->create(ndims, sizes, type);
}
CVAPI(cv::Mat*) core_Mat_cross(cv::Mat *self, cv::Mat *m)
{
    cv::Mat ret = self->cross(*m);
    return new cv::Mat(ret);
}
CVAPI(uchar*) core_Mat_data(cv::Mat *self)
{
    return self->data;
}
CVAPI(const uchar*) core_Mat_datastart(cv::Mat *self)
{
    return self->datastart;
}
CVAPI(const uchar*) core_Mat_dataend(cv::Mat *self)
{
    return self->dataend;
}
CVAPI(int) core_Mat_depth(cv::Mat *self)
{
    return self->depth();
}
     
CVAPI(cv::Mat*) core_Mat_diag1(cv::Mat *self)
{
    cv::Mat ret = self->diag();
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_diag2(cv::Mat *self, int d)
{
    cv::Mat ret = self->diag(d);
    return new cv::Mat(ret);
}
CVAPI(double) core_Mat_dot(cv::Mat *self, cv::Mat *m)
{
    return self->dot(*m);
}
CVAPI(uint64) core_Mat_elemSize(cv::Mat *self)
{
    return self->elemSize();
}
CVAPI(uint64) core_Mat_elemSize1(cv::Mat *self)
{
    return self->elemSize1();
}
CVAPI(int) core_Mat_empty(cv::Mat *self)
{
    return self->empty() ? 1 : 0;
}
CVAPI(cv::MatExpr*) core_Mat_eye(int rows, int cols, int type)
{    
    cv::MatExpr eye = cv::Mat::eye(rows, cols, type);
    cv::MatExpr *ret = new cv::MatExpr(eye);
    return ret;
}
CVAPI(cv::Mat*) core_Mat_inv1(cv::Mat *self)
{
    cv::Mat ret = self->inv();
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_inv2(cv::Mat *self, int method)
{
    cv::Mat ret = self->inv(method);
    return new cv::Mat(ret);
}
CVAPI(int) core_Mat_isContinuous(cv::Mat *self)
{
    return self->isContinuous() ? 1 : 0;
}
CVAPI(int) core_Mat_isSubmatrix(cv::Mat *self)
{
    return self->isSubmatrix() ? 1 : 0;
}
CVAPI(void) core_Mat_locateROI(cv::Mat *self, MyCvSize *wholeSize, MyCvPoint *ofs)
{
    cv::Size wholeSize2;
    cv::Point ofs2;
    self->locateROI(wholeSize2, ofs2);
    *wholeSize = c(cv::Size(wholeSize2.width, wholeSize2.height));
    *ofs = c(cv::Point(ofs2.x, ofs2.y));
}
 

CVAPI(cv::MatExpr*) core_Mat_mul1(cv::Mat *self, cv::Mat *m)
{
    cv::MatExpr ret = self->mul(*m);
    return new cv::MatExpr(ret);
}
CVAPI(cv::MatExpr*) core_Mat_mul2(cv::Mat *self, cv::Mat *m, double scale)
{
    cv::MatExpr ret = self->mul(*m, scale);
    return new cv::MatExpr(ret);
}
CVAPI(cv::MatExpr*) core_Mat_ones1(int rows, int cols, int type)
{
    cv::MatExpr ret = cv::Mat::ones(rows, cols, type);
    return new cv::MatExpr(ret);
}
CVAPI(cv::MatExpr*) core_Mat_ones2(int ndims, const int *sz, int type)
{
    //cv::MatExpr ret = cv::Mat::ones(ndims, sz, type);
    //return new cv::MatExpr(ret);
    return NULL;
}
CVAPI(cv::Mat*) core_Mat_row_toMat(cv::Mat *self, int y)
{
    cv::Mat ret = self->row(y);
    return new cv::Mat(ret);
}
CVAPI(cv::MatExpr*) core_Mat_row_toMatExpr(cv::Mat *self, int y)
{
    cv::Mat ret = self->row(y);
    return new cv::MatExpr(ret);
}
CVAPI(cv::Mat*) core_Mat_rowRange_toMat(cv::Mat *self, int startRow, int endRow)
{
    cv::Mat ret = self->rowRange(startRow, endRow);
    return new cv::Mat(ret);
}
CVAPI(cv::MatExpr*) core_Mat_rowRange_toMatExpr(cv::Mat *self, int startRow, int endRow)
{
    cv::Mat ret = self->rowRange(startRow, endRow);
    return new cv::MatExpr(ret);
}
CVAPI(int) core_Mat_rows(cv::Mat *self)
{
    return self->rows;
}
CVAPI(MyCvSize) core_Mat_size(cv::Mat *self)
{
    return c(self->size());
}
CVAPI(int) core_Mat_sizeAt(cv::Mat *self, int i)
{
    int size = self->size[i];
    return size;
}
CVAPI(uint64) core_Mat_step11(cv::Mat *self)
{
    return self->step1();
}
CVAPI(uint64) core_Mat_step12(cv::Mat *self, int i)
{
    return self->step1(i);
}
CVAPI(uint64) core_Mat_step(cv::Mat *self)
{
    return self->step;
}
CVAPI(uint64) core_Mat_stepAt(cv::Mat *self, int i)
{
    return self->step[i];
}
CVAPI(cv::Mat*) core_Mat_subMat1(cv::Mat *self, int rowStart, int rowEnd, int colStart, int colEnd)
{
    cv::Range rowRange(rowStart, rowEnd);
    cv::Range colRange(colStart, colEnd);
    cv::Mat ret = (*self)(rowRange, colRange);
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_subMat2(cv::Mat *self, int nRanges, MyCvSlice *ranges)
{
    std::vector<cv::Range> rangesVec;
    for (int i = 0; i < nRanges; i++)
    {
        rangesVec.push_back(cpp(ranges[i]));
    }
    cv::Mat ret = (*self)(&rangesVec[0]);
    return new cv::Mat(ret);
}
CVAPI(cv::Mat*) core_Mat_t(cv::Mat *self)
{
    cv::Mat expr = self->t();
    return new cv::Mat(expr);
}
CVAPI(uint64) core_Mat_total(cv::Mat *self)
{
    return self->total();
}
CVAPI(int) core_Mat_type(cv::Mat *self)
{
    return self->type();
}
CVAPI(cv::MatExpr*) core_Mat_zeros1(int rows, int cols, int type)
{
    cv::MatExpr expr = cv::Mat::zeros(rows, cols, type);
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_zeros2(int ndims, const int *sz, int type) // Not defined in .lib 
{
    //cv::MatExpr expr = cv::Mat::zeros(ndims, sz, type);
    //return new cv::MatExpr(expr);
    return NULL; 
}

CVAPI(uchar*) core_Mat_ptr1d(cv::Mat *self, int i0)
{
    return self->ptr(i0);
}
CVAPI(uchar*) core_Mat_ptr2d(cv::Mat *self, int i0, int i1)
{
    return self->ptr(i0, i1);
}
CVAPI(uchar*) core_Mat_ptr3d(cv::Mat *self, int i0, int i1, int i2)
{
    return self->ptr(i0, i1, i2);
}
CVAPI(uchar*) core_Mat_ptrnd(cv::Mat *self, int *idx)
{
    return self->ptr(idx);
}

CVAPI(void) core_Mat_reserve(cv::Mat *obj, size_t sz)
{
    obj->reserve(sz);
}
CVAPI(void) core_Mat_resize1(cv::Mat *obj, size_t sz)
{
    obj->resize(sz);
}
CVAPI(void) core_Mat_resize2(cv::Mat *obj, size_t sz, MyCvScalar s)
{
    obj->resize(sz, cpp(s));
}
CVAPI(void) core_Mat_pop_back(cv::Mat *obj, size_t nelems)
{
    obj->pop_back(nelems);
}
        
#pragma endregion